*tremc-9999 (20 Apr 2017)

  20 Apr 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +metadata.xml, +tremc-9999.ebuild:
  net-p2p/tremc: new ebuild  tremc is a python3 fork of transmission-remote-cli