@@ -1,0 +1,22 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST tremc-0_p20170424.tar.gz 255957 SHA256 49faf31c7872d7e7b7dc8e6cae9765bf05443d37015d6d43749979a929a37f9c SHA512 984fcf24aed2e59f05e20b5a3feea1369e8cf95ece07dec1e4067352ee11224c1c8b20fe5bc484a9b40c3bf4c81d5b066b142828da23a0b6d9c141098379f8fa WHIRLPOOL 5114ce25adb2ee4d50aacc30311c81047785c744c8ea463e29e06303db0ecc766f68e09cf65b6ba7e2db10138f63f11e19040f8e24a6f37e3ee9ccc2728d9544
+-----BEGIN PGP SIGNATURE-----
+
+iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAlj9wGxfFIAAAAAALgAo
+aXNzdWVyLWZwckBub3RhdGlvbnMub3BlbnBncC5maWZ0aGhvcnNlbWFuLm5ldDQ0
+QzkwMzQyMzkyQ0NFQjU1QURCNjIxMjJGMDRFMzFGMDcyMDFFN0QACgkQLwTjHwcg
+Hn0KOg//byt9TcWckX3NAqpQDYN1m8yK6aDU7b5y4BTFgNchFT3SeuvlHIWrBrAy
+xmi2TwIzq3hJUvhkX+139PTQOr/h71R7nDotLdLHkgUyHRLHV2tJdstmx1hYZlTn
+wPf3cVTIVS+YNcsjVvNWflEo+1CuPknYjrI20QeeJVH3HGeCuH6cdii64vbsAMdL
+22PjKUta2aWt1l6m5pCpWBW8rXMMdpOwE2zl4l4UcaIIwwYZ1NPZNnVFK+g3pJCU
+43bVcgKtbf4nbA6w0SqCJkBMPR3e8qIowJUjy3gn1OI9sgXn2ccU4XnWkSl6JjQz
+Gle2EXUbsGUZDgofyFKdbJDbZbQVepA4UYBB4dMu4iYF28JnzJ3bFosCtmHifR7I
+Oqwe7RJIoF/3pN0Qw0c3LU5yo2FBqyYhP1TFdW+iCmjyl6Q+hS9ZDkj2+HPntxBn
+8QMQUeM0tRi2ihEp6yY7t9Cxk0pBcHdvodm0dY/dxl8oakonyQRGJX17fY+foSDu
+eliWrK0lGRNeMJluFDomELZMY4M8cbg5S6nfch5NgGrbZ39BYQwb5u0TZWNflc0q
+f4LfI5mszlXpcPjAHDKj3B4+q5m+ZPR4HtlHBPYfUvGUPpbt++Roy5FfuzM8h+Wb
+rlhbUWGJ09QWXmuYC3WZ7nYQm1D77Zt/mjb1e4nRfNlo2Ui44Ss=
+=QHKM
+-----END PGP SIGNATURE-----
