@@ -1,3 +1,9 @@
+*tremc-0_p20170424 (24 Apr 2017)
+
+  24 Apr 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  +tremc-0_p20170424.ebuild:
+  net-p2p/tremc: add snapshot
+
 *tremc-9999 (20 Apr 2017)
 
   20 Apr 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
